Fix menu bar icon alignment classes not working within a menu group, fixes #519

--- a/scss/components/_menu-bar.scss
+++ b/scss/components/_menu-bar.scss
@@ -342,7 +342,7 @@ $menubar-icon-spacing: $menubar-item-padding !default;
 
     // Menu bar is condensed
     .menu-bar {
-      @include menu-bar-layout(horizontal, false);
+      > li { flex: 0 0 auto; }
       margin: 0;
     }
 
